[tool.poetry]
name = "dpns"
version = "0.1.0"
description = ""
authors = ["Rudnik Pavel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
alembic = "^1.13.1"
telebot = "0.0.5"
pydantic-settings = "^2.2.1"
aiohttp = "^3.9.3"
asyncpg = "^0.29.0"
git-cliff = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"